marko/style.scss
$red:    rgb(255,  99, 132);
$blue:   rgb( 54, 162, 235);
$yellow: rgb(255, 206,  86);
$cyan:   rgb( 75, 192, 192);
$violet: rgb(153, 102, 255);
$orange: rgb(255, 159,  64);

:export {
  red: $red;
  blue: $blue;
  yellow: $yellow;
  cyan: $cyan;
  violet: $violet;
  orange: $orange;
}

@import "uikit/src/scss/variables-theme.scss";
@import "uikit/src/scss/mixins-theme.scss";
@import "uikit/src/scss/uikit-theme.scss";
@import "slider.scss";

$nav-width: 20em;
$header-height: 12em;

.main-container {
  display: flex;
  position: fixed;
  top: $header-height;

  @media (max-width: $breakpoint-xsmall-max) {
    flex-wrap: wrap;
  }

  @media (min-width: $breakpoint-small) {
    height: 100%;
  }
}

.content-container {
  width: 100%;
  overflow: scroll;
  padding: 1.5em 0 1.5em 0;

  @media (min-width: $breakpoint-small) {
    height: calc(100% - #{$header-height});
    left: $nav-width;
    width: calc(100% - #{$nav-width});

    .uk-container {
      height: 100%;
    }
  }
}

.sidebar {
  flex: 1 1 $nav-width;
  width: $nav-width;
  box-sizing: border-box;

  @media (max-width: $breakpoint-xsmall-max) {
    flex: auto;
    border-bottom: 1px solid change-color($blue, $alpha: 0.5);
  }

  @media (min-width: $breakpoint-small) {
    height: 100%;
    border-right: 1px solid change-color($blue, $alpha: 0.5);
  }
}

header {
  position: fixed;
  height: $header-height;
  width: 100%;
  border-bottom: 1px solid change-color($blue, $alpha: 0.5);
  display: flex;
  align-items: center;

  .uk-container {
    @media (min-width: $breakpoint-small) {
      margin: initial;
    }
  }
}

.step-slider {
  display: flex;
  padding: 1em 0 1em 0;

  input[type='range'] {
    flex: 3;
    padding-right: 0.5em;
  }

  input[type='number'] {
    flex: 1;
    padding-left: 0.5em;
    text-align: right;
  }
}

html {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  height: 100%;
  min-height: 100%;
}

.chart-outer-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.chart {
  width: 100%;
  height: 100%;

  @media (min-width: $breakpoint-small) {
    flex: 1 1 50%;
  }
}

